--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
                   </p>
                 </div>
                 <div class="margin-top-200 flex">
-                  <img src="assets/server-64.png" alt="icon" />
+                  <img src="assets/2 Automate Data backup.svg" alt="icon" />
                   <p class="benefit-p">Automated Data Backup Solutions</p>
                 </div>
                 <div class="margin-top-200 flex">
-                  <img src="assets/statistics-report-68.png" alt="icon" />
+                  <img src="assets/3 Analysis.svg" alt="icon" />
                   <p class="benefit-p">
                     Improving the Simplicity and Efficiency of Planning,
                     Budgeting, Forecasting, and Analysis
@@ -148,13 +148,13 @@
                 </div>
                 
                 <div class="margin-top-200 flex">
-                  <img src="assets/security-shield-50.png" alt="icon" />
+                  <img src="assets/4 data exchange.svg" alt="icon" />
                   <p class="benefit-p">
                     Secure Data Exchange Strategies
                   </p>
                 </div>
                 <div class="margin-top-200 flex">
-                  <img src="assets/security-shield-50.png" alt="icon" />
+                  <img src="assets/5 Performance.svg" alt="icon" />
                   <p class="benefit-p">
                     Automatic Performance Optimisation: Enhancing Efficiency
                     with Ease
@@ -162,36 +162,36 @@
                 </div>
               </div>
               <div class="benefit-icon">
-                <img src="assets/benefits.png  " alt="" />
+                <img src="assets/benefits.png" alt="" />
               </div>
               <div class="benefit-text">
                 <div class="margin-top-200 flex">
-                  <img src="assets/security-shield-50.png" alt="icon" />
+                  <img src="assets/6 customize cloud.svg" alt="icon" />
                   <p class="benefit-p">
                     Customisable Cloud Solutions with Built-in Scalability
                   </p>
                 </div>
                 <div class="margin-top-200 flex">
-                  <img src="assets/security-shield-50.png" alt="icon" />
+                  <img src="assets/7 dashboard.svg" alt="icon" />
                   <p class="benefit-p">
                     Engaging Control Panel: A Dynamic Alternative to Interactive
                     Dashboards
                   </p>
                 </div>
                 <div class="margin-top-200 flex">
-                  <img src="assets/security-shield-50.png" alt="icon" />
+                  <img src="assets/8 Cost effective solution.svg" alt="icon" />
                   <p class="benefit-p">
                     Budget-Friendly Solutions: The Cost-Effective Nature of Tally on Cloud
                   </p>
                 </div>
                 <div class="margin-top-200 flex">
-                  <img src="assets/security-shield-50.png" alt="icon" />
+                  <img src="assets/9 Support.svg" alt="icon" />
                   <p class="benefit-p">
                     24/7 Customer Service 365 Days a Year
                   </p>
                 </div>
                 <div class="margin-top-200 flex">
-                  <img src="assets/security-shield-50.png" alt="icon" />
+                  <img src="assets/10 print.svg" alt="icon" />
                   <p class="benefit-p">
                     Printing Remotely: A Convenient Printing Solution
                   </p>
@@ -223,14 +223,14 @@
         <div class="container">
           <div class="even-columns">
             <div class="flex">
-              <img src="assets/light-central-database-53.png" alt="icon" />
+              <img src="assets/active user.png" alt="icon" />
               <div class="benefit-p">
                 <p class="fw-bold fs-450">1500+</p>
                 <p>Active Users</p>
               </div>
             </div>
             <div class="flex">
-              <img src="assets/light-central-database-53.png" alt="icon" />
+              <img src="assets/retention.png" alt="icon" />
               <div class="benefit-p">
                 <p class="fw-bold fs-450">98%</p>
                 <p>Retention Rate</p>
@@ -244,7 +244,7 @@
               </div>
             </div>
             <div class="flex">
-              <img src="assets/light-central-database-53.png" alt="icon" />
+              <img src="assets/partner.png" alt="icon" />
               <div class="benefit-p">
                 <p class="fw-bold fs-450">Official</p>
                 <p>Tally Cloud Partner</p>
@@ -263,7 +263,7 @@
           </h2>
           <div class="why-choose margin-top-200">
             <div class="card">
-              <img src="assets/server-64.png" alt="icon" />
+              <img src="assets/Authorised Cloud Partner.svg" alt="icon" />
               <h3 class="fs-450 fw-semi-bold">Authorised Cloud Partner</h3>
               <p class="text-align">
                 India's Single Authorised Tally Partner with Proprietary Data
@@ -271,7 +271,7 @@
               </p>
             </div>
             <div class="card">
-              <img src="assets/server-64.png" alt="icon" />
+              <img src="assets/Solo Supplier.svg" alt="icon" />
               <h3 class="fs-450 fw-semi-bold">Solo Supplier</h3>
               <p class="text-align">
                 All Your Needs in One Place: Cloud, Tally Support, Renewals,
@@ -279,7 +279,7 @@
               </p>
             </div>
             <div class="card">
-              <img src="assets/server-64.png" alt="icon" />
+              <img src="assets/Support team.svg" alt="icon" />
               <h3 class="fs-450 fw-semi-bold">Dedicated Support Team</h3>
               <p class="text-align">
                 With two decades of business know- how and mastery in cloud
@@ -288,7 +288,7 @@
               </p>
             </div>
             <div class="card">
-              <img src="assets/server-64.png" alt="icon" />
+              <img src="assets/Tier 4 Datacenter.svg" alt="icon" />
               <h3 class="fs-450 fw-semi-bold">Tier 4 Datacenter</h3>
               <p class="text-align">
                 Enterprise Servers hosted in Asia's largest Datacenter - CTRL-S
@@ -309,12 +309,15 @@
             data-speed="slow"
           >
             <div class="scroller__inner">
-              <img src="assets/logo2.png" alt="Brand Logo" />
-              <img src="assets/logo3.png" alt="Brand Logo" />
-              <img src="assets/logo1.png" alt="Brand Logo" />
-              <img src="assets/logo4.png" alt="Brand Logo" />
-              <img src="assets/logo5.jpg" alt="Brand Logo" />
-              <img src="assets/logo6.png" alt="Brand Logo" />
+              <img src="assets/logos/FNP1.png" alt="Brand Logo" />
+              <img src="assets/logos/FNP.png" alt="Brand Logo" />
+              <img src="assets/logos/FNP2.png" alt="Brand Logo" />
+              <img src="assets/logos/FNP3.png" alt="Brand Logo" />
+              <img src="assets/logos/FNP4.png" alt="Brand Logo" />
+              <img src="assets/logos/FNP5.png" alt="Brand Logo" />
+              <img src="assets/logos/FNP6.png" alt="Brand Logo" />
+              <img src="assets/logos/FNP7.png" alt="Brand Logo" />
+              <img src="assets/logos/FNP8.png" alt="Brand Logo" />
             </div>
           </div>
         </div>
