--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                   </p>
                 </div>
               </div>
-              <div class="benefit-icon">
-                <img src="assets/benefits.png" alt="" />
+              <div class="benefit-icon margin-top-200">
+                <img src="assets/linkedin-sales-solutions-B_DJO2-K22M-unsplash.jpg" alt="" />
               </div>
               <div class="benefit-text">
                 <div class="margin-top-200 flex">
