--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <nav>
             <ul role="list" class="nav-list">
               <li class="call fw-semi-bold">
-                <a href="tel:+91 93726 99231">9372699231</a>
+                <a href="tel:+91 93726 99231">+91 9372699231</a>
               </li>
               <li class="call fw-semi-bold">
-                <a href="tel:+91 89288 40447">8928840447</a>
+                <a href="tel:+91 89288 40447">+91 8928840447</a>
               </li>
               <li class="mail-big fw-semi-bold">
                 <a href="mailto:krishasoftsolutions@gmail.com"
@@ -58,7 +58,10 @@
               <div class="questionaire">
                 <h2 class="fw-bold fs-450">Fill the form</h2>
                 <p class="fw-bold fs-450">I am</p>
-                <form>
+                <form
+                  action="https://formsubmit.co/krishasoftsolutions@gmail.com"
+                  method="POST"
+                >
                   <div>
                     <select name="profile" id="profile">
                       <option value="BusinessOwner">Business Owner</option>
@@ -133,17 +136,18 @@
                 <img src="assets/2 Automate Data backup.svg" alt="icon" />
                 <p class="benefit-p">Automated Data Backup Solutions</p>
               </div>
-              <div class="margin-top-200 flex">
-                <img src="assets/3 Analysis.svg" alt="icon" />
+              <div class="margin-top-200 flex cost-effective">
+                <img src="assets/8 Cost effective solution.svg" alt="icon" />
                 <p class="benefit-p">
-                  Improving the Simplicity and Efficiency of Planning,
-                  Budgeting, Forecasting, and Analysis
+                  Budget-Friendly Solutions: The Cost-Effective Nature of Tally
+                  on Cloud
                 </p>
               </div>
-
               <div class="margin-top-200 flex">
-                <img src="assets/4 data exchange.svg" alt="icon" />
-                <p class="benefit-p">Secure Data Exchange Strategies</p>
+                <img src="assets/6 customize cloud.svg" alt="icon" />
+                <p class="benefit-p">
+                  Customisable Cloud Solutions with Built-in Scalability
+                </p>
               </div>
               <div class="margin-top-200 flex">
                 <img src="assets/5 Performance.svg" alt="icon" />
@@ -161,12 +165,6 @@
             </div>
             <div class="benefit-text">
               <div class="margin-top-200 flex">
-                <img src="assets/6 customize cloud.svg" alt="icon" />
-                <p class="benefit-p">
-                  Customisable Cloud Solutions with Built-in Scalability
-                </p>
-              </div>
-              <div class="margin-top-200 flex">
                 <img src="assets/7 dashboard.svg" alt="icon" />
                 <p class="benefit-p">
                   Engaging Control Panel: A Dynamic Alternative to Interactive
@@ -174,10 +172,14 @@
                 </p>
               </div>
               <div class="margin-top-200 flex">
-                <img src="assets/8 Cost effective solution.svg" alt="icon" />
+                <img src="assets/4 data exchange.svg" alt="icon" />
+                <p class="benefit-p">Secure Data Exchange Strategies</p>
+              </div>
+              <div class="margin-top-200 flex">
+                <img src="assets/3 Analysis.svg" alt="icon" />
                 <p class="benefit-p">
-                  Budget-Friendly Solutions: The Cost-Effective Nature of Tally
-                  on Cloud
+                  Improving the Simplicity and Efficiency of Planning,
+                  Budgeting, Forecasting, and Analysis
                 </p>
               </div>
               <div class="margin-top-200 flex">
@@ -234,7 +236,7 @@
               <img src="assets/google-48.png" alt="icon" />
               <div class="benefit-p">
                 <p class="fw-bold fs-450">1000+</p>
-                <p>Google Reviews</p>
+                <p>Positive Reviews</p>
               </div>
             </div>
             <div class="flex">
@@ -333,7 +335,7 @@
       <section class="padding-block-900 bg-neutral-400">
         <div class="container">
           <h3 class="fw-bold fs-500 text-align padding-bottom-500">
-            What they say about us
+            What Customers say about us
           </h3>
           <div class="testimonial-wrapper">
             <span>
@@ -535,7 +537,10 @@
             <div class="questionaire">
               <h2 class="fw-bold fs-450">Ready, Steady, Begin!</h2>
               <p class="fw-bold fs-450">I am</p>
-              <form>
+              <form
+                action="https://formsubmit.co/krishasoftsolutions@gmail.com"
+                method="POST"
+              >
                 <div>
                   <select name="profile" id="profile">
                     <option value="BusinessOwner">Business Owner</option>
