--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#"><img src="assets/Krisha.png" alt="Tally" /></a>
+          <a href="#"><img src="assets/Combined logo.png" alt="Tally" /></a>
           <nav>
             <ul role="list" class="nav-list">
               <li class="call fw-semi-bold">
