--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 <h2 class="fw-bold fs-450">Fill the form</h2>
                 <p class="fw-bold fs-450">I am</p>
                 <form
-                  action="https://formsubmit.co/00b39aeddef2ec24b8d28bb3c18c2b0a"
+                  action="https://formcarry.com/s/fjJBqxHpQd0"
                   method="POST"
                 >
                   <div>
-                    <select name="profile" id="profile">
+                    <select name="Profile" id="profile">
                       <option value="BusinessOwner">Business Owner</option>
                       <option value="CA">C.A.</option>
                       <option value="Accountant">Accountant</option>
@@ -74,7 +74,7 @@
                   <div>
                     <input
                       type="text"
-                      name="FullName"
+                      name="Full Name"
                       placeholder="Full Name*"
                       required
                     />
@@ -90,7 +90,7 @@
                   <div>
                     <input
                       type="text"
-                      name="PhoneNumber"
+                      name="Phone Number"
                       placeholder="Phone Number*"
                       required
                     />
@@ -541,12 +541,9 @@
             <div class="questionaire">
               <h2 class="fw-bold fs-450">Ready, Steady, Begin!</h2>
               <p class="fw-bold fs-450">I am</p>
-              <form
-                action="https://formsubmit.co/00b39aeddef2ec24b8d28bb3c18c2b0a"
-                method="POST"
-              >
+              <form action="https://formcarry.com/s/fjJBqxHpQd0" method="POST">
                 <div>
-                  <select name="profile" id="profile">
+                  <select name="Profile" id="profile">
                     <option value="BusinessOwner">Business Owner</option>
                     <option value="CA">C.A.</option>
                     <option value="Accountant">Accountant</option>
@@ -557,7 +554,7 @@
                 <div>
                   <input
                     type="text"
-                    name="FullName"
+                    name="Full Name"
                     placeholder="Full Name*"
                     required
                   />
@@ -573,7 +570,7 @@
                 <div>
                   <input
                     type="text"
-                    name="PhoneNumber"
+                    name="Phone Number"
                     placeholder="Phone Number*"
                     required
                   />
